fix: fix height on iOS in the section Hero for the page Web Design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
 @layer base {
+  :root {
+    --real-browser-height: 100%;
+  }
+
   body {
     @apply min-w-[320px] font-sans font-light leading-normal text-black antialiased;
     -webkit-tap-highlight-color: transparent;
